Add an experiment flag for the ResourcePercentage based RMD.

As the first step in a Resource Percentage signal, add a chrome flag to
control use of the resource percentage signal to take snapshots.


Bug: 765002
Change-Id: Iadc8e0464b0f348633d96b31f7ce2b00d2962f83