chrome/browser/flag_descriptions.h
@@ -1137,6 +1137,9 @@ extern const char kOfflinePagesPrefetchingDescription[];
 extern const char kOfflinePagesPrefetchingUIName[];
 extern const char kOfflinePagesPrefetchingUIDescription[];
 
+extern const char kOfflinePagesResourceBasedSnapshotName[];
+extern const char kOfflinePagesResourceBasedSnapshotDescription[];
+
 extern const char kOfflinePagesRenovationsName[];
 extern const char kOfflinePagesRenovationsDescription[];
 
